# top-bar

./: .gitignore  README.md  anda.hcl  extension.js  meson.build  metadata.json  stylesheet.css  tau-top-bar.spec  top-bar.spec
.github/workflows/: package.yml
